--- a/staging.cfg
+++ b/staging.cfg
@@ -6,6 +6,7 @@ parts +=
     zeoserver
     instance1
     instance2
+    instance3
     instance-debug
     varnish-build
     varnish-conf
@@ -24,13 +25,14 @@ haproxy     = 127.0.0.1
 supervisor  = 127.0.0.1
 
 [ports]
-zeoserver   = 8000
-instance1   = 8081
-instance2   = 8082
-instance-debug = 8080
-varnish     = 8050
-haproxy     = 8055
-supervisor  = 8091
+zeoserver   = ${v:port-base}00
+instance1   = ${v:port-base}81
+instance2   = ${v:port-base}82
+instance3   = ${v:port-base}83
+instance-debug = ${v:port-base}80
+varnish     = ${v:port-base}50
+haproxy     = ${v:port-base}55
+supervisor  = ${v:port-base}91
 
 [users]
 zope        = zope
@@ -51,6 +53,10 @@ http-address = ${hosts:instance1}:${ports:instance1}
 [instance2]
 <= instance1
 http-address = ${hosts:instance2}:${ports:instance2}
+
+[instance3]
+<= instance1
+http-address = ${hosts:instance3}:${ports:instance3}
 
 [instance-debug]
 <= instance1
