--- a/buildout.cfg
+++ b/buildout.cfg
@@ -1,3 +1,7 @@
+[v]
+policy-package = ecreall.edmdemo
+port-base = 80
+
 [buildout]
 extends =
     http://dist.plone.org/release/4.2.1/versions.cfg
@@ -33,11 +37,12 @@ eggs +=
 [instance1]
 recipe = plone.recipe.zope2instance
 user = admin:KevakIlhut4
-http-address = 8080
 eggs =
     ${buildout:eggs}
-    webpro.policy
-zcml = webpro.policy
+    ${v:policy-package}
+
+zcml = ${v:policy-package}
+
 environment-vars =
     PYTHON_EGG_CACHE ${buildout:directory}/tmp
     TMPDIR ${buildout:directory}/tmp
