fixed : instance3 host

--- a/staging.cfg
+++ b/staging.cfg
@@ -19,6 +19,7 @@ parts +=
 zeoserver   = 127.0.0.1
 instance1   = 127.0.0.1
 instance2   = 127.0.0.1
+instance3   = 127.0.0.1
 instance-debug = 127.0.0.1
 varnish     = 127.0.0.1
 haproxy     = 127.0.0.1
