--- a/buildout.cfg
+++ b/buildout.cfg
@@ -4,7 +4,7 @@ port-base = 80
 
 [buildout]
 extends =
-    http://dist.plone.org/release/4.2.1/versions.cfg
+    http://dist.plone.org/release/4.2.2/versions.cfg
     sources.cfg
     checkouts.cfg
     versions.cfg
@@ -14,25 +14,21 @@ parts +=
     zopepy
     backup
     omelette
-    patchblob
-    postinstall
 extensions =
     mr.developer
     buildout.dumppickedversions
 versions = versions
 allow-hosts =
     pypi.python.org
-    dist.plone.org
-    dist.plone.org:5021
     pypi.ecreall.com
+    effbot.org
 
 find-links =
-    http://dist.plone.org/release/4.2.1/
+    http://dist.plone.org/release/4.2.2/
     http://pypi.ecreall.com/pypi/simple
 
 eggs +=
     Pillow
-
 
 [instance1]
 recipe = plone.recipe.zope2instance
@@ -40,14 +36,11 @@ user = admin:KevakIlhut4
 eggs =
     ${buildout:eggs}
     ${v:policy-package}
-
 zcml = ${v:policy-package}
-
 environment-vars =
     PYTHON_EGG_CACHE ${buildout:directory}/tmp
     TMPDIR ${buildout:directory}/tmp
     zope_i18n_compile_mo_files true
-
 event-log-custom =
   <logfile>
     level info
@@ -72,9 +65,9 @@ mailinglogger =
     level error
     flood-level 10
 #    smtp-server localhost:9025
-    from crt-monitoring@ecreall.com
-    to crt-monitoring@ecreall.com
-    subject [Error on CRT] [%(hostname)s] %(line)s
+    from development@ecreall.com
+    to development@ecreall.com
+    subject [Error on Project X] [%(hostname)s] %(line)s
   </mailing-logger>
 
 [zopepy]
@@ -96,15 +89,3 @@ recipe = collective.recipe.omelette
 eggs =
     ${instance1:eggs}
     ${test:eggs}
-
-[patchblob]
-recipe = collective.recipe.patch
-egg = ZODB3
-patches = blob.patch
-
-[postinstall]
-recipe = plone.recipe.command
-command =
-    chmod -R g+r ${buildout:directory}/var
-    find ${buildout:directory}/var -type d | xargs chmod g+x
-update-command = ${:command}
