--- a/deployment.cfg
+++ b/deployment.cfg
@@ -11,8 +11,8 @@ recipe = collective.recipe.template
 inline =
     #!/bin/bash
     ${buildout:bin-directory}/backup -q
-    rsync -a --delete ${backup:location}/ sav@tiguar.ecreall.com:/home/sav/webpro/backups/
-    rsync -aH --delete ${backup:blobbackuplocation}/ sav@tiguar.ecreall.com:/home/sav/webpro/blobstoragebackups/
+    rsync -a --delete ${backup:location}/ sav@host:/home/sav/projectx/backups/
+    rsync -aH --delete ${backup:blobbackuplocation}/ sav@host:/home/sav/projextx/blobstoragebackups/
 output = ${buildout:bin-directory}/backup.sh
 mode = 755
 
