--- a/sources.cfg
+++ b/sources.cfg
@@ -5,10 +5,9 @@ extends =
 [remotes]
 tdesvenain = git://github.com/tdesvenain
 tdesvenain_push = git@github.com:tdesvenain
-svn_ecreall_crt = https://svn.ecreall.com/CRT/packages
+svn_ecreall = https://svn.ecreall.com/ProjectX/packages
 
 [sources]
-
 Products.OpenXml = git ${remotes:collective}/Products.OpenXml.git pushurl=${remotes:collective_push}/Products.OpenXml.git
 collective.edm.listing = git ${remotes:tdesvenain}/collective.edm.listing.git pushurl=${remotes:tdesvenain_push}/collective.edm.listing.git
 collective.favorites = git ${remotes:tdesvenain}/collective.favorites.git pushurl=${remotes:tdesvenain_push}/collective.favorites.git
@@ -21,7 +20,3 @@ ecreall.trashcan = git ${remotes:tdesvenain}/ecreall.trashcan.git pushurl=${remo
 eea.facetednavigation = git ${remotes:collective}/eea.facetednavigation.git pushurl=${remotes:collective_push}/eea.facetednavigation.git
 eea.jquery = git ${remotes:collective}/eea.jquery.git pushurl=${remotes:collective_push}/eea.jquery.git
 iw.rejectanonymous = git ${remotes:collective}/iw.rejectanonymous.git pushurl=${remotes:collective_push}/iw.rejectanonymous.git
-#ore.bigfile = svn https://svn.objectrealms.net/svn/public/ore.bigfile/trunk/
-
-# Plone
-Pillow = git ${remotes:tdesvenain}/Pillow.git pushurl=${remotes:tdesvenain_push}/Pillow.git
