--- a/staging.cfg
+++ b/staging.cfg
@@ -88,7 +88,7 @@ programs =
     60 haproxy ${buildout:bin-directory}/haproxy [-f ${buildout:directory}/etc/haproxy.conf -db] true
     70 varnish (autorestart=true) ${buildout:bin-directory}/varnish ${varnish:location} true
 eventlisteners =
-    memmon TICK_60 ${buildout:bin-directory}/memmon [-p instance1=1200MB -p instance2=1200MB -m crt-monitoring@ecreall.com]
+    memmon TICK_60 ${buildout:bin-directory}/memmon [-p instance1=1200MB -p instance2=1200MB -m development@ecreall.com]
     crashmail PROCESS_STATE ${buildout:bin-directory}/crashmail [-m vincentfretin@ecreall.com]
 
 [varnish-build]
