added instance3 to supervisor and haproxy

--- a/staging.cfg
+++ b/staging.cfg
@@ -85,10 +85,11 @@ programs =
     10 zeoserver ${zeoserver:location}/bin/runzeo ${zeoserver:location} true ${users:zope}
     20 instance1 ${buildout:bin-directory}/instance1 [console] ${instance1:location} true
     30 instance2 ${buildout:bin-directory}/instance2 [console] ${instance2:location} true
+    40 instance3 ${buildout:bin-directory}/instance3 [console] ${instance3:location} true
     60 haproxy ${buildout:bin-directory}/haproxy [-f ${buildout:directory}/etc/haproxy.conf -db] true
     70 varnish (autorestart=true) ${buildout:bin-directory}/varnish ${varnish:location} true
 eventlisteners =
-    memmon TICK_60 ${buildout:bin-directory}/memmon [-p instance1=1200MB -p instance2=1200MB -m development@ecreall.com]
+    memmon TICK_60 ${buildout:bin-directory}/memmon [-p instance1=1200MB -p instance2=1200MB -m crt-monitoring@ecreall.com]
     crashmail PROCESS_STATE ${buildout:bin-directory}/crashmail [-m vincentfretin@ecreall.com]
 
 [varnish-build]
