--- a/templates/haproxy.conf.in
+++ b/templates/haproxy.conf.in
@@ -44,10 +44,10 @@ frontend zopecluster
 
 # Load balancing over the zope instances
 backend zope
-  # appsession __ac len 32 timeout 1d
   balance roundrobin
   cookie serverid insert nocache indirect
   option httpchk GET /
 
   server plone0101 ${hosts:instance1}:${ports:instance1} cookie p0101 maxconn 2 check inter 2000 rise 2 fall 5
   server plone0102 ${instance2:http-address} cookie p0102 maxconn 2 check inter 2000 rise 2 fall 5
+  server plone0102 ${instance3:http-address} cookie p0103 maxconn 2 check inter 2000 rise 2 fall 5
