Use show-picked-versions

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -9,15 +9,19 @@ extends =
     checkouts.cfg
     versions.cfg
     tests.cfg
+
 parts +=
     instance1
     zopepy
     backup
     omelette
+
 extensions =
     mr.developer
-    buildout.dumppickedversions
+
+show-picked-versions = true
 versions = versions
+
 allow-hosts =
     pypi.python.org
     pypi.ecreall.com
