Update bootstrap/buildout to Plone 4.3.4-pending

--- a/sources.cfg
+++ b/sources.cfg
@@ -14,6 +14,7 @@ collective.favorites = git ${remotes:tdesvenain}/collective.favorites.git pushur
 collective.portlet.customizablerecent = git ${remotes:tdesvenain}/collective.portlet.customizablerecent.git pushurl=${remotes:tdesvenain_push}/collective.portlet.customizablerecent.git
 collective.quickupload = git ${remotes:collective}/collective.quickupload.git pushurl=${remotes:collective_push}/collective.quickupload.git
 collective.suggestions = git ${remotes:tdesvenain}/collective.suggestions.git pushurl=${remotes:tdesvenain_push}/collective.suggestions.git
+ecreall.edmdemo = git ${remotes:tdesvenain}/ecreall.edmdemo.git pushurl=${remotes:tdesvenain_push}/ecreall.edmdemo.git
 ecreall.helpers.testing = git ${remotes:tdesvenain}/ecreall.helpers.testing.git pushurl=${remotes:tdesvenain_push}/ecreall.helpers.testing.git
 ecreall.helpers.upgrade = git ${remotes:tdesvenain}/ecreall.helpers.upgrade.git pushurl=${remotes:tdesvenain_push}/ecreall.helpers.upgrade.git
 ecreall.trashcan = git ${remotes:tdesvenain}/ecreall.trashcan.git pushurl=${remotes:tdesvenain_push}/ecreall.trashcan.git
